enviando model cliente e controller para cliente, metodo para essa visao criada e acoes sobre Viewbags

--- a/TAP/TAP/Views/Home/Index.cshtml
+++ b/TAP/TAP/Views/Home/Index.cshtml
@@ -1,5 +1,14 @@
 ﻿@{
     ViewBag.Title = "Home Page";
+    /*
+     * Para abrir esta pagina em outro layout usar o codigo abaixo
+     * Layout = ""; //-> Não chama nenhum layout Usa-se Layout = "X", em que X devera ser o nome do layout
+     * por default eh setado Layout = "~/Views/Shared/_Layout.cshtml
+     * Se nao for definido layout, como ocorre neste momento, o arquivo index sera aberto no layout default
+     * em @RenderBody() no _Layout.cshtml
+     * 
+     */
+    
 }
 
 <div class="jumbotron">
