--- a/TAP/TAP/Content/Site.css
+++ b/TAP/TAP/Content/Site.css
@@ -22,3 +22,13 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.carros {
+    width: 100%; height:32px; background: #0094ff; color: #ffffff; display:block; text-align:center; padding:2px; margin-bottom:1px;
+    cursor: zoom-in;
+}
+
+.carros:hover {
+    background: #ffffff;
+    color: #0094ff;
+}
