--- a/NoticiaApp/NoticiaApp/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/NoticiaApp/NoticiaApp/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model Noticia.Models.ExternalLoginConfirmationViewModel
+﻿@model NoticiaApp.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
