--- a/NoticiaApp/NoticiaApp/Views/Account/ResetPassword.cshtml
+++ b/NoticiaApp/NoticiaApp/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Noticia.Models.ResetPasswordViewModel
+﻿@model NoticiaApp.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
