--- a/NoticiaApp/NoticiaApp/Views/Manage/AddPhoneNumber.cshtml
+++ b/NoticiaApp/NoticiaApp/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model Noticia.Models.AddPhoneNumberViewModel
+﻿@model NoticiaApp.Models.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
