--- a/NoticiaApp/NoticiaApp/Views/Manage/ChangePassword.cshtml
+++ b/NoticiaApp/NoticiaApp/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Noticia.Models.ChangePasswordViewModel
+﻿@model NoticiaApp.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
