--- a/NoticiaApp/NoticiaApp/Views/Manage/SetPassword.cshtml
+++ b/NoticiaApp/NoticiaApp/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Noticia.Models.SetPasswordViewModel
+﻿@model NoticiaApp.Models.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
