--- a/NoticiaApp/NoticiaApp/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/NoticiaApp/NoticiaApp/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model Noticia.Models.VerifyPhoneNumberViewModel
+﻿@model NoticiaApp.Models.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
