--- a/NoticiaApp/NoticiaApp/Views/Account/ForgotPassword.cshtml
+++ b/NoticiaApp/NoticiaApp/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Noticia.Models.ForgotPasswordViewModel
+﻿@model NoticiaApp.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
