--- a/NoticiaApp/NoticiaApp/Views/Account/Login.cshtml
+++ b/NoticiaApp/NoticiaApp/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@using Noticia.Models
+﻿@using NoticiaApp.Models
 @model LoginViewModel
 @{
     ViewBag.Title = "Log in";
@@ -11,7 +11,6 @@
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h4>Use a local account to log in.</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
@@ -42,20 +41,21 @@
                     </div>
                 </div>
                 <p>
-                    @Html.ActionLink("Register as a new user", "Register")
+                    @Html.ActionLink("Registrar-se", "Register")
                 </p>
-                @* Enable this once you have account confirmation enabled for password reset functionality
+                @* Enable this once you have account confirmation enabled for password reset functionality*@
                     <p>
-                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                    </p>*@
+                        @Html.ActionLink("Esqueceu sua senha?", "ForgotPassword")
+                    </p>
             }
         </section>
     </div>
-    <div class="col-md-4">
+    @*<div class="col-md-4">
         <section id="socialLoginForm">
             @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
         </section>
     </div>
+    *@
 </div>
 
 @section Scripts {
