--- a/NoticiaApp/NoticiaApp/Views/Account/Register.cshtml
+++ b/NoticiaApp/NoticiaApp/Views/Account/Register.cshtml
@@ -1,14 +1,13 @@
-﻿@model Noticia.Models.RegisterViewModel
+﻿@model NoticiaApp.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
 
-<h2>@ViewBag.Title.</h2>
-
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
+    <br />
+    <h4>Crie uma nova conta! Isso será divertido.</h4> <!-- Facisa!1 -->
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
