--- a/NoticiaApp/NoticiaApp/Views/Home/About.cshtml
+++ b/NoticiaApp/NoticiaApp/Views/Home/About.cshtml
@@ -1,7 +1,27 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<!-- Page Header -->
+<!-- Set your background image for this header on the line below. -->
+<header class="intro-header" style="background-image: url('/Content/img/about-bg.jpg')">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <div class="page-heading">
+                    <h1>Sobre</h1>
+                    <hr class="small">
+                    <span class="subheading">Quem somos? Haha!</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+<!-- Main Content -->
+<div class="container">
+    <div class="row">
+        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+            <p>Somos uma equipe dedicada a entregar as noticias mais atuais, com base em um sistema de busca por vários sites do mundo, e também através do cadastro imediato de novas noticias, realizados no momento em que tudo acontece.</p>
+        </div>
+    </div>
+</div>
