--- a/NoticiaApp/NoticiaApp/Views/Home/Index.cshtml
+++ b/NoticiaApp/NoticiaApp/Views/Home/Index.cshtml
@@ -2,30 +2,44 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+@model IEnumerable<NoticiaApp.Models.Noticia>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+ <!-- Page Header -->
+<!-- Set your background image for this header on the line below. -->
+<header class="intro-header" style="background-image: url('/Content/img/home-bg.jpg')">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <div class="site-heading">
+                    <h1>Noticias</h1>
+                    <hr class="small">
+                    <span class="subheading">Um simples site que mostra o mundo</span>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+</header>
+<!-- Main Content -->
+<div class="container">
+    <div class="row">
+        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                @foreach (var item in Model)
+                {
+
+                    <div class="post-preview">
+                        <a href="post.html">
+                            <h2 class="post-title">
+                                @Html.DisplayFor(modelItem => item.Titulo)
+                            </h2>
+                            <h3 class="post-subtitle">
+                                @Html.DisplayFor(modelItem => item.SubTitulo)
+                            </h3>
+                        </a>
+                        <p class="post-meta"><a href="@Html.DisplayFor(modelItem => item.Meta)">Fonte. </a>
+                        Postado em @Html.DisplayFor(modelItem => item.DataCreated.Day)/@Html.DisplayFor(modelItem => item.DataCreated.Month)/@Html.DisplayFor(modelItem => item.DataCreated.Year) às @Html.DisplayFor(modelItem => item.DataCreated.Hour):@Html.DisplayFor(modelItem => item.DataCreated.Minute)</p>
+                    </div>
+                    <hr>
+                }
+        </div>
     </div>
 </div>
