--- a/NoticiaApp/NoticiaApp/Views/Manage/Index.cshtml
+++ b/NoticiaApp/NoticiaApp/Views/Manage/Index.cshtml
@@ -1,21 +1,20 @@
-﻿@model Noticia.Models.IndexViewModel
+﻿@model NoticiaApp.Models.IndexViewModel
 @{
     ViewBag.Title = "Manage";
 }
 
-<h2>@ViewBag.Title.</h2>
-
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
-    <h4>Change your account settings</h4>
+    <br />
+    <h4>Altere as configurações de sua conta.</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>Password:</dt>
+        <dt>Senha:</dt>
         <dd>
             [
             @if (Model.HasPassword)
             {
-                @Html.ActionLink("Change your password", "ChangePassword")
+                @Html.ActionLink("Altere sua senha", "ChangePassword")
             }
             else
             {
@@ -23,10 +22,10 @@
             }
             ]
         </dd>
-        <dt>External Logins:</dt>
+        <dt>Logins externos:</dt>
         <dd>
             @Model.Logins.Count [
-            @Html.ActionLink("Manage", "ManageLogins") ]
+            @Html.ActionLink("Gerenciar", "ManageLogins") ]
         </dd>
         @*
             Phone Numbers can used as a second factor of verification in a two-factor authentication system.
