--- a/NoticiaApp/NoticiaApp/Views/Manage/ManageLogins.cshtml
+++ b/NoticiaApp/NoticiaApp/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model Noticia.Models.ManageLoginsViewModel
+﻿@model NoticiaApp.Models.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
