--- a/NoticiaApp/NoticiaApp/Views/Noticias/Delete.cshtml
+++ b/NoticiaApp/NoticiaApp/Views/Noticias/Delete.cshtml
@@ -4,11 +4,8 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>Deseja realmente apagar?</h3>
 <div>
-    <h4>Noticia</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -28,11 +25,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.meta)
+            @Html.DisplayNameFor(model => model.Meta)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.meta)
+            @Html.DisplayFor(model => model.Meta)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Texto)
+        </dt>
+
+        <dd style="word-wrap: break-word; width: 45em; padding: 10px;">
+            @Html.DisplayFor(model => model.Texto)
         </dd>
 
         <dt>
@@ -57,8 +62,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Apagar" class="btn btn-default" /> |
+            @Html.ActionLink("Voltar", "Index")
         </div>
     }
 </div>
