--- a/NoticiaApp/NoticiaApp/Views/Noticias/Index.cshtml
+++ b/NoticiaApp/NoticiaApp/Views/Noticias/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Noticias</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Criar", "Create")
 </p>
 <table class="table">
     <tr>
@@ -18,13 +18,7 @@
             @Html.DisplayNameFor(model => model.SubTitulo)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.meta)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DataCreated)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastUpdate)
+            @Html.DisplayNameFor(model => model.Meta)
         </th>
         <th></th>
     </tr>
@@ -38,18 +32,12 @@
             @Html.DisplayFor(modelItem => item.SubTitulo)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.meta)
+            @Html.DisplayFor(modelItem => item.Meta)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.DataCreated)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastUpdate)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Edit", "Edit", new { id=item.Id }, new { @style="font-size: 0.8em;" }) |
+            @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @style = "font-size: 0.8em;" }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @style = "font-size: 0.8em;" })
         </td>
     </tr>
 }
