--- a/NoticiaApp/NoticiaApp/Views/Home/Contact.cshtml
+++ b/NoticiaApp/NoticiaApp/Views/Home/Contact.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model NoticiaApp.Models.Mail
+
+@{
     ViewBag.Title = "Contact";
 }
 
@@ -23,32 +25,36 @@
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
             <p>Quer dividir algo conosco? Envie-nos uma mensagem e no máximo em 24h estaremos respondendo.</p>
+
+@using (Html.BeginForm())
+{
+    @Html.ValidationSummary()
             <form name="sentMessage" id="contactForm" novalidate>
                 <div class="row control-group">
                     <div class="form-group col-xs-12 floating-label-form-group controls">
                         <label>Name</label>
-                        <input type="text" class="form-control" placeholder="Nome" id="name" required data-validation-required-message="Please enter your name.">
+                        <input type="text" class="form-control" placeholder="Nome" id="name" name="Nome" required data-validation-required-message="Please enter your name.">
                         <p class="help-block text-danger"></p>
                     </div>
                 </div>
                 <div class="row control-group">
                     <div class="form-group col-xs-12 floating-label-form-group controls">
                         <label>Email Address</label>
-                        <input type="email" class="form-control" placeholder="Endereço de E-mail" id="email" required data-validation-required-message="Please enter your email address.">
+                        <input type="email" class="form-control" placeholder="Endereço de E-mail" id="email" name="Email" required data-validation-required-message="Please enter your email address.">
                         <p class="help-block text-danger"></p>
                     </div>
                 </div>
                 <div class="row control-group">
                     <div class="form-group col-xs-12 floating-label-form-group controls">
                         <label>Phone Number</label>
-                        <input type="tel" class="form-control" placeholder="Numero de telefone" id="phone" required data-validation-required-message="Please enter your phone number.">
+                        <input type="tel" class="form-control" placeholder="Numero de telefone" id="phone" name="Telefone" required data-validation-required-message="Please enter your phone number.">
                         <p class="help-block text-danger"></p>
                     </div>
                 </div>
                 <div class="row control-group">
                     <div class="form-group col-xs-12 floating-label-form-group controls">
                         <label>Message</label>
-                        <textarea rows="5" class="form-control" placeholder="Mensagem" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                        <textarea rows="5" class="form-control" placeholder="Mensagem" id="message" name="Mensagem" required data-validation-required-message="Please enter a message."></textarea>
                         <p class="help-block text-danger"></p>
                     </div>
                 </div>
@@ -60,6 +66,7 @@
                     </div>
                 </div>
             </form>
+}
         </div>
     </div>
 </div>
