--- a/NoticiaApp/NoticiaApp/Views/Noticias/Create.cshtml
+++ b/NoticiaApp/NoticiaApp/Views/Noticias/Create.cshtml
@@ -49,6 +49,13 @@
                     </div>
 
                     <div class="form-group">
+                        @Html.LabelFor(model => model.Genero, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.DropDownListFor(model => model.Genero.Id, new SelectList(ViewBag.generos, "Id", "Tipo"), "", new { htmlAttributes = new { @class = "form-control" } })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
                         @Html.LabelFor(model => model.Meta, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.Meta, new { htmlAttributes = new { @class = "form-control" } })
