--- a/NoticiaApp/NoticiaApp/Views/Noticias/Details.cshtml
+++ b/NoticiaApp/NoticiaApp/Views/Noticias/Details.cshtml
@@ -27,6 +27,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Genero)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Genero.Tipo)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Meta)
         </dt>
 
